[fix]:fix search box flickering && update  markdown style (#1534)

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -53,7 +53,7 @@ html[lang='en-US'] {
 // }
 .markdown :where(p, h1, h2, h3, h4, h5, h6, li, blockquote) {
     font-family: var(--font-family-base);
-    color: #2a2f34;
+    color: #1F1F26;
 }
 
 body {
